k8s/accounting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounting
  template:
    metadata:
      labels:
        app: accounting
      annotations:
        instrumentation.opentelemetry.io/inject-java: "observability/moonorb-instrumentation"    
    spec:
      containers:
      - name: accounting
        image: moonorb/accounting:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 2222
