k8s/accounting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounting
spec:
  selector:
    app: accounting
  ports:
    - protocol: TCP
      port: 2222
      targetPort: 2222
  type: ClusterIP
