k8s/registration-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registration-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: registration.moonorb.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: registration
              port:
                number: 80
